<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tv_time_title"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="horizontal"
    android:background="@drawable/shape_view_radius">

    <com.sanmen.bluesky.timepicker.widget.WheelView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_yearUnit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical"
        android:text="@string/tvYearUnit"
        android:layout_marginEnd="4dp" />

    <View
        android:id="@+id/v_yearAndMonth"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#e8e8e8" />

    <com.sanmen.bluesky.timepicker.widget.WheelView
        android:id="@+id/month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_monthUnit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical"
        android:text="@string/tvMonthUnit"
        android:layout_marginEnd="4dp" />

    <View
        android:id="@+id/v_monthAndDay"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#e8e8e8" />

    <com.sanmen.bluesky.timepicker.widget.WheelView
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_dayUnit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical"
        android:text="@string/tvDayUnit"
        android:layout_marginEnd="4dp" />

    <View
        android:id="@+id/v_dayAndHour"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#e8e8e8" />

    <com.sanmen.bluesky.timepicker.widget.WheelView
        android:id="@+id/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_hourUnit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical"
        android:text="@string/tvHourUnit"
        android:layout_marginEnd="4dp" />

    <View
        android:id="@+id/v_hourAndMinute"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#e8e8e8" />

    <com.sanmen.bluesky.timepicker.widget.WheelView
        android:id="@+id/minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_minuteUnit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="4dp"
        android:gravity="center_vertical"
        android:text="@string/tvMinuteUnit"
        android:layout_marginEnd="4dp" />
</LinearLayout>